<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:background="@color/spotterOscuro"
        android:orientation="horizontal"
        android:layout_width="290sp" >

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/PubAvFil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:text="@string/HeadPubAvFIl"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_marginStart="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/cerVisFil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="#00FFFFFF"
                android:contentDescription="@string/cerrar_vista"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:onClick="cerrarActividadPubFil"/>
        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/selRanFil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:prompt="@string/SelUnRango" />

    <Button
        android:id="@+id/confAvFil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4sp"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/spotterOscuro"
        android:gravity="center"
        android:text="@string/confirmar_aviso_fila"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:onClick="onClickConfAvFil" />



</LinearLayout>