<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:background="@color/spotterOscuro"
        android:orientation="horizontal"
        android:layout_width="290sp"  >

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/nomSuper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8sp"
                android:text="@string/HeadPubAvDes"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:layout_marginStart="10sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/cerVisDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="#00FFFFFF"
                android:contentDescription="@string/cerrar_vista"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:onClick="cerrarActividadPubDes"/>
        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/selRanDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:prompt="@string/SelUnRango" />

    <Button
        android:id="@+id/confAvDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4sp"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/spotterOscuro"
        android:gravity="center"
        android:text="@string/confirmar_aviso_desabastecimiento"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:onClick="onClickConfAvDes"/>



</LinearLayout>